src/tradr/manifests/deployment.yml
#       Copyright 2017 IBM Corp All Rights Reserved

#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at

#       http://www.apache.org/licenses/LICENSE-2.0

#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradr
  annotations:
    prism.subkind: "Node.js"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tradr
      version: v1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: tradr
        version: v1
    spec:
      containers:
      - name: tradr
        image: stocktradersjilv2/tradr:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: https
          containerPort: 3000
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
