src/tradr/manifests/service.yml
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: tradr-service
  labels:
    app: tradr
    solution: stock-trader
spec:
  type: NodePort 
  ports:
    - port: 3000
      nodePort: 31002
      targetPort: 3000
      name: https
  selector:
    app: tradr
  externalIPs:
    - 172.21.21.165
