src/tradr/manifests/Ingress.yml
#Configure the ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tradr-ingress
  labels:
    solution: stock-trader
# annotations:
#   ingress.kubernetes.io/rewrite-target: /tradrr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
    #ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/secure-backends: "true"
    #ingress.kubernetes.io/app-root: "/tradr"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /tradr/*
        backend:
          serviceName: tradr-service
          servicePort: 3000
      - path: /tradr
        backend:
          serviceName: tradr-service
          servicePort: 3000
